# qntp

./: CMakeLists.txt  Info.plist  common.pri  mac.pri  qntp.pro
src/qntp/: config.h
